fix: align images in row,styling

--- a/style.scss
+++ b/style.scss
@@ -44,8 +44,10 @@ h6{
 }
 
 ul,
-li{
+li,
+a{
     list-style: none;
+    text-transform: capitalize;
 }
 
 //Header-Section css 
@@ -68,6 +70,11 @@ li{
         .contact-info{
             display: flex;
             gap: 15px;
+            font-family: 'Mulish',sans-serif;
+            p{
+                font-size: 14px;
+                color: var(--non-highlight);
+            }
         }
     }
 
@@ -75,6 +82,16 @@ li{
         display: flex;
         justify-content: space-between;
         padding-top: 32px;
+
+        .logo{
+            display: flex;
+            gap: 16px;
+            font-family: 'Mulish',sans-serif;
+            h1{
+                font-size: 32px;
+                color: #FFF;
+            }
+        }
 
         .nav-menu{
             display: flex;
@@ -139,6 +156,7 @@ h2{
 p{
     color: var(--font-color);
     font-size: 22px;
+    font-family: 'Mulish',sans-serif;
 }
 
 
@@ -231,19 +249,22 @@ button{
     display: flex;
     padding: 100px 0px;
     justify-content: space-between;
-    expert{
-        flex: 1;
-    }
     .field-group{
         display: flex;
-        justify-content: space-between;
-        .slider{
-            // padding: 24px 0 48px 0;
-            -webkit-appearance: none;
-            outline: none;
-            width: 555px;
-            height: 6px;
-            background-color: var(--btn-color);
+        gap: 426px;
+        p{
+            font-size: 18px;
+        }
+        .slide-container{
+            position: relative;
+            text-align: center;
+            .slider{
+                -webkit-appearance: none;
+                outline: none;
+                width: 555px;
+                height: 6px;
+                background-color: var(--btn-color);
+            }
         }
     }
 }
@@ -259,9 +280,15 @@ button{
         padding-bottom: 100px;
         display: flex;
         gap: 88px;
-        .feature-items{
-
-            display: inline-block;
+        .xtraxt{
+            img{
+                padding-top: 8px ;
+            }
+        }
+        .codemantra{
+            img{
+                padding-top: 16px;
+            }
         }
     }
 }
@@ -287,12 +314,13 @@ button{
     }
     .content{
         display: flex;
-        gap: 110px;
-        .btn{
+        gap: 100px;
+        button{
             border: 1px solid #FFF;
-            padding: 16px 36px;
-            a{
+            background-color: transparent;
+            a {
                 color: #FFF;
+                text-decoration: none;
             }
         }
     }
@@ -343,7 +371,6 @@ button{
 
     .footer-content{
         display: flex;
-        justify-content: space-between;
         border-bottom: 1px solid var(--horizontal-line);
         padding-bottom: 80px;
         h2{
@@ -356,10 +383,6 @@ button{
             text-align: left;
             }
 
-        // li{
-        //     text-align: left;
-        //     padding-left: 84px;
-        // }
             .row{
                 font-size: 22px;
                 font-family: 'Mulish',sans-serif;
@@ -368,7 +391,7 @@ button{
                 text-align: center;
             }
 
-            .contact{
+            #mail{
                 padding: 24px 0px 14px;
             }
 
@@ -378,6 +401,10 @@ button{
                     font-size: 32px;
                     font-family: 'Cormorant';
                     padding-bottom: 23px;
+                }
+                .footer-col{
+                    display: flex;
+                    gap: 8px;
                 }
             }
 
@@ -410,14 +437,12 @@ button{
                 }
             }
             .footer-icons{
-                flex: 1;
-
-                .social-icons{
+                .social-links{
                     display: flex;
                     gap: 10px;
                     padding-top: 24px;
                     justify-content: center;
-                    .social-items{
+                    .social-icons{
                         background-color: #AAAAAA1A;
                         padding: 12px;
                         &:hover{
